--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           </svg>
         </button>
         <div class="logo" role="img" aria-label="ARES Logo">
-          <img src="https://www.arrl.org/images/view//Public_Service/ARES/ares_cl.jpg" alt="ARRL ARES Logo" />
+          <img src="img/ares_cl.jpg" alt="ARRL ARES Logo" />
         </div>
         <div>
           <strong>Essex County ARES</strong><br>
