--- a/index.html
+++ b/index.html
@@ -257,10 +257,10 @@
           <h3>Who can join</h3>
           <p class="note">Any FCC-licensed Amateur Radio operator with a commitment to public service may participate in ARES in a non-leadership role. Advancing into leadership or higher qualification levels includes additional training and, for certain levels, ARRL membership.</p>
           <h3>Monthly Net</h3>
-          <p class="note">Second Tuesday of each month at 8 PM ET.</p>
-          <p class="note">KC2TXA (SBARC) Repeater</p>
-          <p class="note">RF: 146.595 | +1 MHz | 100.0 Hz PL encode AND decode</p>
-          <p class="note">EchoLink: KC2TXA-R</p>
+          <p class="note">Second Tuesday of every month at 8 PM ET<br>
+                          KC2TXA (SBARC) Repeater<br>
+                          RF: 146.595 | +1 MHz | 100.0 Hz PL encode AND decode<br>
+                          EchoLink: KC2TXA-R</p>
         </div>
         <div class="card">
           <h3>Training path (high-level)</h3>
