--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
       <div class="two-col">
         <div class="card">
           <h3>Who can join</h3>
-          <p class="note">Any FCC-licensed Amateur Radio operator with a commitment to public service may participate in ARES in a non-leadership role. Advancing into leadership or higher qualification levels includes additional training and, for certain levels, ARRL membership.</p>
+          <p class="note">Any FCC-licensed Amateur Radio operator with an interest in public service is welcome to take part in ARES in a supporting role. Opportunities to grow into leadership or higher qualification levels are available with additional training, and in some cases, ARRL membership.</p>
           <h3>Monthly Net</h3>
           <p class="note">Second Thursday of every month at 8 PM ET<br>
                           KC2TXA (SBARC) Repeater<br>
