--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
       <details open>
         <summary>How to request ARES support</summary>
         <div class="note" style="margin-top:8px">
-          Agencies may request ARES through the Essex County Emergency Coordinator (see <a href="#contact">Contact</a>). Please include: point of contact, incident/event description, locations, timeframe, safety considerations, and any preferred forms (e.g., ICS-213) or operational constraints. ARES will coordinate with your ICS structure and provide a communications lead to integrate with your team.
+          Agencies may request ARES through the <a href="#contact">Essex County Emergency Coordinator</a>. Please include: point of contact, incident/event description, locations, timeframe, safety considerations, and any preferred forms (e.g., ICS-213) or operational constraints. ARES will coordinate with your ICS structure and provide a communications lead to integrate with your team.
         </div>
         <p style="margin-top:10px"><a class="btn" href="#contact">Go to Contact</a></p>
       </details>
@@ -256,6 +256,7 @@
         <div class="card">
           <h3>Who can join</h3>
           <p class="note">Any FCC-licensed Amateur Radio operator with an interest in public service is welcome to take part in ARES in a supporting role. Opportunities to grow into leadership or higher qualification levels are available with additional training, and in some cases, ARRL membership.</p>
+          <p class="note">Groups.io page: <a href="https://nenj-ares-emcomm.groups.io/g/main">https://nenj-ares-emcomm.groups.io/g/main</a>
           <h3>Monthly Net</h3>
           <p class="note">Second Thursday of every month at 8 PM ET<br>
                           KC2TXA (SBARC) Repeater<br>
