--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
         <div class="card">
           <h3>Who can join</h3>
           <p class="note">Any FCC-licensed Amateur Radio operator with an interest in public service is welcome to take part in ARES in a supporting role. Opportunities to grow into leadership or higher qualification levels are available with additional training, and in some cases, ARRL membership.</p>
-          <p class="note">Groups.io page: <a href="https://nenj-ares-emcomm.groups.io/g/main">https://nenj-ares-emcomm.groups.io/g/main</a>
+          <p class="note">Groups.io page: <a href="https://nenj-ares-emcomm.groups.io/g/main" target="_blank" rel="noopener noreferrer">https://nenj-ares-emcomm.groups.io/g/main</a>
           <h3>Monthly Net</h3>
           <p class="note">Second Thursday of every month at 8 PM ET<br>
                           KC2TXA (SBARC) Repeater<br>
