--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 <br><br><br><br>
     <section id="activation" class="wrap">
       <h2>Activation &amp; requests</h2>
-      <details open>
+      <details>
         <summary>How to request ARES support</summary>
         <div class="note" style="margin-top:8px">
           Agencies may request ARES through the <a href="#contact">Essex County Emergency Coordinator</a>. Please include: point of contact, incident/event description, locations, timeframe, safety considerations, and any preferred forms (e.g., ICS-213) or operational constraints. ARES will coordinate with your ICS structure and provide a communications lead to integrate with your team.
