--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
       <h2>Capabilities</h2>
       <div class="grid">
         <div class="card" style="grid-column: span 6">
+          <details>
           <h3>Operational modalities</h3>
           <p class="muted">Multi-band voice and data using VHF/UHF/HF; repeaters and accepted simplex channels; portable and fixed stations; point-to-point and net operations.</p>
           <div>
@@ -202,6 +203,7 @@
             <span class="tag">Field deployments</span>
           </div>
         </div>
+        </details>
         <div class="card" style="grid-column: span 6">
           <h3>Where we serve</h3>
           <p class="muted">Emergency Operations Centers (EOCs), shelters and reception centers, public health clinics, hospitals, mobile command posts, damage-assessment teams, and public service events.</p>
@@ -236,7 +238,7 @@
         <div class="note" style="margin-top:8px">
           Agencies may request ARES through the <a href="#contact">Essex County Emergency Coordinator</a>. Please include: point of contact, incident/event description, locations, timeframe, safety considerations, and any preferred forms (e.g., ICS-213) or operational constraints. ARES will coordinate with your ICS structure and provide a communications lead to integrate with your team.
         </div>
-        <p style="margin-top:10px"><a class="btn" href="#contact">Go to Contact</a></p>
+        <p style="margin-top:10px"><a class="btn" href="#contact">Contact</a></p>
       </details>
       <details>
         <summary>What to expect during activation</summary>
