--- a/index.html
+++ b/index.html
@@ -149,7 +149,9 @@
         <div>
           <h1>Volunteer radio communicators supporting Essex County’s responders and community partners</h1>
           <p class="lead">
-            Essex County <strong>Amateur Radio Emergency Service (ARES)</strong> is a volunteer communications unit of federally licensed Amateur Radio operators who support government and non-governmental partners before, during, and after emergencies. We train year-round and can establish reliable <em>voice and data</em> radio links when regular systems are overloaded, disrupted, or otherwise unavailable.
+            Essex County <strong>Amateur Radio Emergency Service (ARES)</strong> is a volunteer communications unit of federally licensed Amateur Radio operators who support 
+            government and non-governmental partners before, during, and after emergencies. We train year-round and can establish reliable <em>voice and data</em> radio links
+            when regular systems are overloaded, disrupted, or otherwise unavailable.   We also provide reliable communications and an extra layer of safety at community events.
           </p>
           <div class="kpi" style="margin:18px 0 0">
             <span class="metric"><span class="badge">Coverage</span><br><b>Essex County, NJ</b><br><span class="muted">22 municipalities</span></span>
