--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
               <li>Field-expedient antennas and portable stations</li>
               <li>Voice and message traffic, including partner-preferred forms (e.g., ICS-213) via radio or radio-email</li>
               <li>Liaison with regional nets and neighboring counties</li>
+              <li>Communications for 5K/10K/half/marathon runs, cycling events, large community gatherings</li>
             </ul>
             <div class="note"><br><br>ARES augments—not replaces—public safety communications, and operates under partner direction.</div>
           </div>
