--- a/tour-de-millburn-2025.html
+++ b/tour-de-millburn-2025.html
@@ -7,7 +7,7 @@
   <title>2025 Tour de Millburn – ARES Mobile Ops</title>
   <meta name="description" content="ARES mobile operations page for the 2025 Tour de Millburn. Map, tactical positions, operators, and frequencies." />
 
-  <!-- iOS "add to home screen" niceties -->
+  <!-- iOS PWA niceties -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
@@ -88,7 +88,7 @@
     }
     .chip {
       padding:8px 10px; border-radius:999px; border:1px solid var(--ring); background:var(--card);
-      font-size:12px; font-weight:600;
+      font-size:12px; font-weight:700; color:#fff; /* ensure white text per request */
     }
     .chip[data-active="true"] { outline:2px solid var(--muted); background:#141f3a; }
 
@@ -151,8 +151,10 @@
 </head>
 <body>
   <header>
-    <!-- Reuse ARES logo from the existing site path -->
-    <img src="/img/ares_cl.jpg" alt="ARES logo" width="36" height="36">
+    <!-- Clickable ARES logo -->
+    <a href="https://ares.osi3.net/" aria-label="ARES Home">
+      <img src="/img/ares_cl.jpg" alt="ARES logo" width="36" height="36">
+    </a>
     <div class="title">
       <b>2025 Tour de Millburn</b>
       <span>ARES Mobile Operations • Sept 7, 2025 • 7:30–10:30 AM</span>
@@ -166,6 +168,7 @@
         <div class="kv"><b>Ops Window</b><div>07:30 – 10:30 AM</div></div>
         <div class="kv"><b>Primary</b><div>147.505 (−1.0, PL 123.0)</div></div>
         <div class="kv"><b>Backup</b><div>146.595 (+1.0, PL 100.0)</div></div>
+        <div class="kv"><b>Last updated</b><div id="lastUpdated">—</div></div>
       </div>
       <div class="note">Tip: tap a card to expand details, copy frequencies, or open the exact GPS pin in Google Maps.</div>
     </section>
@@ -177,11 +180,11 @@
 
     <!-- MAP VIEW -->
     <section id="view-map" class="mapwrap" role="tabpanel" aria-labelledby="tab-map">
-      <!-- Convert your My Maps link to an embeddable URL -->
+      <!-- Embed automatically reflects changes as long as the map ID stays the same -->
       <iframe
         title="Tour de Millburn – Course & Posts"
         loading="lazy"
-        src="https://www.google.com/maps/d/embed?mid=1vYAZUBwxCEfVb-zgA3t3Ss2n3otS1mU&ll=40.7525930832723%2C-74.32177915858327&z=16">
+        src="https://www.google.com/maps/d/embed?mid=1vYAZUBwxCEfVb-zgA3t3Ss2n3otS1mU">
       </iframe>
     </section>
 
@@ -192,9 +195,9 @@
           <svg width="18" height="18" viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0016 9.5 6.5 6.5 0 109.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79L20 21.49 21.49 20 15.5 14zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/></svg>
           <input id="q" type="search" placeholder="Filter by tactical, street, operator, or situation…" aria-label="Filter positions">
         </div>
-        <button class="chip" data-filter="all" data-active="true">All</button>
-        <button class="chip" data-filter="ARES">ARES</button>
-        <button class="chip" data-filter="MURS">MURS</button>
+        <button class="chip" data-filter="all" data-active="true" aria-pressed="true">All</button>
+        <button class="chip" data-filter="ARES" aria-pressed="false">ARES</button>
+        <button class="chip" data-filter="MURS" aria-pressed="false">MURS</button>
       </div>
 
       <div id="cards" class="list" aria-live="polite"></div>
@@ -203,31 +206,43 @@
 
   <!-- Sticky quick actions -->
   <div class="dock" role="navigation" aria-label="Quick actions">
-    <a class="btn" href="https://www.google.com/maps/d/viewer?mid=1vYAZUBwxCEfVb-zgA3t3Ss2n3otS1mU&ll=40.7525930832723%2C-74.32177915858327&z=16" target="_blank" rel="noopener">Open Full Map</a>
+    <a class="btn" href="https://www.google.com/maps/d/viewer?mid=1vYAZUBwxCEfVb-zgA3t3Ss2n3otS1mU" target="_blank" rel="noopener">Open Full Map</a>
     <button id="copy-net" class="btn" type="button">Copy Net Freqs</button>
+    <button id="dl-csv" class="btn" type="button">Download CSV</button>
   </div>
 
   <script>
     // --- Data model (edit here if assignments change) ---
     const POSTS = [
-      { tac:"P1", pos:"Old Short & Hobart", gps:"40.72768,-74.31125", op:"KE2DRE",
-        primary:"147.505 (−1.0, PL 123.0)", backup:"146.595 (+1.0, PL 100.0)", situation:"Drivers Fail To Stop", band:"ARES" },
-      { tac:"P2", pos:"Glenwood Dr. & Millburn Ave", gps:"40.71938,-74.3208", op:"K2EXX",
-        primary:"147.505 (−1.0, PL 123.0)", backup:"146.595 (+1.0, PL 100.0)", situation:"Drivers Fail To Stop", band:"ARES" },
-      { tac:"X3", pos:"Wyoming Ave & Glen Ave", gps:"40.72474,-74.29625", op:"KB2SUL",
-        primary:"147.505 (−1.0, PL 123.0)", backup:"146.595 (+1.0, PL 100.0)", situation:"Race Intersection", band:"ARES" },
-      { tac:"X4", pos:"Chatham Rd. & Forest Drive S.", gps:"40.72633,-74.3289", op:"WB2GZL",
-        primary:"147.505 (−1.0, PL 123.0)", backup:"146.595 (+1.0, PL 100.0)", situation:"Race Intersection", band:"ARES" },
-      { tac:"V5", pos:"Troy Lane & Troy Drive", gps:"40.75283,-74.31584", op:"Ben",
-        primary:"154.600 (MURS 5)", backup:"154.570 (MURS 4)", situation:"Northern Observation", band:"MURS" },
-      { tac:"V6-A", pos:"Hartshorn Dr. & Mowhawk Rd.", gps:"40.74146,-74.32383", op:"Mara",
-        primary:"154.600 (MURS 5)", backup:"154.570 (MURS 4)", situation:"Central Observation 2", band:"MURS" },
-      { tac:"V6-B", pos:"Long Hill Dr. & Westview Rd.", gps:"40.74891,-74.32602", op:"Mara",
-        primary:"154.600 (MURS 5)", backup:"154.570 (MURS 4)", situation:"Western Observation 1", band:"MURS" },
-      { tac:"V7-A", pos:"Lake Rd. & Western Dr.", gps:"40.7341,-74.32263", op:"KC2NJ",
-        primary:"147.505 (−1.0, PL 123.0)", backup:"146.595 (+1.0, PL 100.0)", situation:"Central Observation 1", band:"ARES" },
-      { tac:"V7-B", pos:"Slayton Dr. & Falmouth St.", gps:"40.7369,-74.33791", op:"KC2NJ",
-        primary:"147.505 (−1.0, PL 123.0)", backup:"146.595 (+1.0, PL 100.0)", situation:"Western Observation 2", band:"ARES" },
+      { tac:"P1",  pos:"Old Short & Hobart",                 gps:"40.72768,-74.31125", op:"KE2DRE",
+        primary:"147.505 (−1.0, PL 123.0)", backup:"146.595 (+1.0, PL 100.0)", situation:"Drivers Fail To Stop",        band:"ARES" },
+
+      { tac:"P2",  pos:"Glenwood Dr. & Millburn Ave",        gps:"40.71938,-74.3208",  op:"K2EXX",
+        primary:"147.505 (−1.0, PL 123.0)", backup:"146.595 (+1.0, PL 100.0)", situation:"Drivers Fail To Stop",        band:"ARES" },
+
+      { tac:"X3",  pos:"Wyoming Ave & Glen Ave",             gps:"40.72474,-74.29625", op:"KB2SUL",
+        primary:"147.505 (−1.0, PL 123.0)", backup:"146.595 (+1.0, PL 100.0)", situation:"Race Intersection",           band:"ARES" },
+
+      { tac:"X4",  pos:"Chatham Rd. & Forest Drive S.",      gps:"40.72633,-74.3289",  op:"WB2GZL",
+        primary:"147.505 (−1.0, PL 123.0)", backup:"146.595 (+1.0, PL 100.0)", situation:"Race Intersection",           band:"ARES" },
+
+      { tac:"V5",  pos:"Troy Lane & Troy Drive",             gps:"40.75283,-74.31584", op:"Ben",
+        primary:"154.600 (MURS 5)",            backup:"154.570 (MURS 4)",            situation:"Northern Observation",  band:"MURS" },
+
+      { tac:"V6-A",pos:"Highview Rd. & Hartshorn Dr.",       gps:"40.74417,-74.3206",  op:"Mara",
+        primary:"154.600 (MURS 5)",            backup:"154.570 (MURS 4)",            situation:"Central Observation 2", band:"MURS" },
+
+      { tac:"V6-B",pos:"Long Hill Dr. & Westview Rd.",       gps:"40.74891,-74.32602", op:"Mara",
+        primary:"154.600 (MURS 5)",            backup:"154.570 (MURS 4)",            situation:"Western Observation 1", band:"MURS" },
+
+      { tac:"V7-A",pos:"Lake Rd. & Western Dr.",             gps:"40.7341,-74.32263",  op:"KC2NJ",
+        primary:"147.505 (−1.0, PL 123.0)",   backup:"146.595 (+1.0, PL 100.0)",     situation:"Central Observation 1", band:"ARES" },
+
+      { tac:"V7-B",pos:"Long Hill Dr. & Lee Terrace",        gps:"40.74172,-74.33291", op:"KC2NJ",
+        primary:"147.505 (−1.0, PL 123.0)",   backup:"146.595 (+1.0, PL 100.0)",     situation:"Western Observation 2", band:"ARES" },
+
+      { tac:"V8",  pos:"Falmouth St. & Cambridge Dr.",       gps:"40.73173,-74.33846", op:"K2AUF",
+        primary:"147.505 (−1.0, PL 123.0)",   backup:"146.595 (+1.0, PL 100.0)",     situation:"Southern Observation 1",band:"ARES" },
     ];
 
     // --- Tab switcher ---
@@ -259,7 +274,6 @@
       return `https://waze.com/ul?ll=${encodeURIComponent(lat.trim()+','+lng.trim())}&navigate=yes`;
     }
     function makeCard(p){
-      const id = `card-${p.tac.replace(/[^a-z0-9\-]/ig,'')}`;
       const el = document.createElement('details');
       el.className = 'card';
       el.innerHTML = `
@@ -306,8 +320,8 @@
     }
     q.addEventListener('input', applyFilter);
     chips.forEach(c => c.addEventListener('click', () => {
-      chips.forEach(x => x.dataset.active = 'false');
-      c.dataset.active = 'true';
+      chips.forEach(x => { x.dataset.active = 'false'; x.setAttribute('aria-pressed','false'); });
+      c.dataset.active = 'true'; c.setAttribute('aria-pressed','true');
       activeBand = c.dataset.filter;
       applyFilter();
     }));
@@ -333,6 +347,36 @@
     document.getElementById('copy-net').addEventListener('click', () => {
       copyText('Primary: 147.505 (−1.0, PL 123.0)\nBackup: 146.595 (+1.0, PL 100.0)');
     });
+
+    // --- CSV export ---
+    function toCSV(rows) {
+      const header = ["Tactical Call","Position","GPS Coordinates","Operator","Primary Frequency","Backup Frequency","Situation","Band"];
+      const escape = v => `"${String(v).replace(/"/g,'""')}"`;
+      const lines = [header, ...rows.map(p => [
+        p.tac, p.pos, p.gps, p.op, p.primary, p.backup, p.situation, p.band
+      ])].map(r => r.map(escape).join(","));
+      return lines.join("\r\n");
+    }
+    function downloadCSV() {
+      const csv = toCSV(POSTS);
+      const blob = new Blob([csv], {type: "text/csv;charset=utf-8;"});
+      const url = URL.createObjectURL(blob);
+      const a = document.createElement("a");
+      a.href = url;
+      a.download = "tour-de-millburn-2025_posts.csv";
+      document.body.appendChild(a);
+      a.click();
+      a.remove();
+      URL.revokeObjectURL(url);
+    }
+    document.getElementById('dl-csv').addEventListener('click', downloadCSV);
+
+    // --- Last updated badge (uses document.lastModified) ---
+    (function setLastUpdated(){
+      const el = document.getElementById('lastUpdated');
+      const d = new Date(document.lastModified || Date.now());
+      el.textContent = d.toLocaleString([], {year:'numeric', month:'short', day:'2-digit', hour:'2-digit', minute:'2-digit'});
+    })();
 
     // --- Tiny toast ---
     const toastDiv = document.createElement('div');
