--- a/tour-de-millburn-2025.html
+++ b/tour-de-millburn-2025.html
@@ -213,37 +213,43 @@
 
   <script>
     // --- Data model (edit here if assignments change) ---
-    const POSTS = [
-      { tac:"P1",  pos:"Old Short & Hobart",                 gps:"40.72768,-74.31125", op:"KE2DRE",
-        primary:"147.505 (−1.0, PL 123.0)", backup:"146.595 (+1.0, PL 100.0)", situation:"Drivers Fail To Stop",        band:"ARES" },
+const POSTS = [
+  { tac:"X1",  pos:"Wyoming Ave & Glen Ave",              gps:"40.72474,-74.29625", op:"KB2SUL",
+    primary:"147.505 (−1.0, PL 123.0)", backup:"146.595 (+1.0, PL 100.0)", situation:"Race Intersection",            band:"ARES" },
 
-      { tac:"P2",  pos:"Glenwood Dr. & Millburn Ave",        gps:"40.71938,-74.3208",  op:"K2EXX",
-        primary:"147.505 (−1.0, PL 123.0)", backup:"146.595 (+1.0, PL 100.0)", situation:"Drivers Fail To Stop",        band:"ARES" },
+  { tac:"P2",  pos:"Old Short & Hobart",                  gps:"40.72768,-74.31125", op:"KE2DRE",
+    primary:"147.505 (−1.0, PL 123.0)", backup:"146.595 (+1.0, PL 100.0)", situation:"Drivers Fail To Stop",         band:"ARES" },
 
-      { tac:"X3",  pos:"Wyoming Ave & Glen Ave",             gps:"40.72474,-74.29625", op:"KB2SUL",
-        primary:"147.505 (−1.0, PL 123.0)", backup:"146.595 (+1.0, PL 100.0)", situation:"Race Intersection",           band:"ARES" },
+  { tac:"V3",  pos:"Hobart Ave. & Gapview Road",          gps:"40.7273,-74.32158",  op:"KC2HLA",
+    primary:"147.505 (−1.0, PL 123.0)", backup:"146.595 (+1.0, PL 100.0)", situation:"Central Observation 1",        band:"ARES" },
 
-      { tac:"X4",  pos:"Chatham Rd. & Forest Drive S.",      gps:"40.72633,-74.3289",  op:"WB2GZL",
-        primary:"147.505 (−1.0, PL 123.0)", backup:"146.595 (+1.0, PL 100.0)", situation:"Race Intersection",           band:"ARES" },
+  { tac:"V4",  pos:"Lake Rd. & Western Dr.",              gps:"40.7341,-74.32263",  op:"KD2ONY",
+    primary:"147.505 (−1.0, PL 123.0)", backup:"146.595 (+1.0, PL 100.0)", situation:"Central Observation 2",        band:"ARES" },
 
-      { tac:"V5",  pos:"Troy Lane & Troy Drive",             gps:"40.75283,-74.31584", op:"Ben",
-        primary:"154.600 (MURS 5)",            backup:"154.570 (MURS 4)",            situation:"Northern Observation",  band:"MURS" },
+  { tac:"V5",  pos:"Highland Ave. & Hartshorn Dr.",       gps:"40.73966,-74.32873", op:"KC2NJ",
+    primary:"147.505 (−1.0, PL 123.0)", backup:"146.595 (+1.0, PL 100.0)", situation:"Central Observation 3",        band:"ARES" },
 
-      { tac:"V6-A",pos:"Highview Rd. & Hartshorn Dr.",       gps:"40.74417,-74.3206",  op:"Mara",
-        primary:"154.600 (MURS 5)",            backup:"154.570 (MURS 4)",            situation:"Central Observation 2", band:"MURS" },
+  { tac:"V6",  pos:"Highview Rd. & Hartshorn Dr.",        gps:"40.74417,-74.3206",  op:"Mara",
+    primary:"154.600 (MURS 5)",            backup:"154.570 (MURS 4)",            situation:"Central Observation 4",   band:"MURS" },
 
-      { tac:"V6-B",pos:"Long Hill Dr. & Westview Rd.",       gps:"40.74891,-74.32602", op:"Mara",
-        primary:"154.600 (MURS 5)",            backup:"154.570 (MURS 4)",            situation:"Western Observation 1", band:"MURS" },
+  { tac:"V7",  pos:"Troy Lane & Troy Drive",              gps:"40.75283,-74.31584", op:"Ben",
+    primary:"154.600 (MURS 5)",            backup:"154.570 (MURS 4)",            situation:"Northern Observation",    band:"MURS" },
 
-      { tac:"V7-A",pos:"Lake Rd. & Western Dr.",             gps:"40.7341,-74.32263",  op:"KC2NJ",
-        primary:"147.505 (−1.0, PL 123.0)",   backup:"146.595 (+1.0, PL 100.0)",     situation:"Central Observation 1", band:"ARES" },
+  { tac:"V8",  pos:"Long Hill Dr. & Westview Rd.",        gps:"40.74891,-74.32602", op:"Mara",
+    primary:"154.600 (MURS 5)",            backup:"154.570 (MURS 4)",            situation:"Western Observation 1",   band:"MURS" },
 
-      { tac:"V7-B",pos:"Long Hill Dr. & Lee Terrace",        gps:"40.74172,-74.33291", op:"KC2NJ",
-        primary:"147.505 (−1.0, PL 123.0)",   backup:"146.595 (+1.0, PL 100.0)",     situation:"Western Observation 2", band:"ARES" },
+  { tac:"V9",  pos:"Long Hill Dr. & Lee Terrace",         gps:"40.74172,-74.33291", op:"KC2NJ",
+    primary:"147.505 (−1.0, PL 123.0)",   backup:"146.595 (+1.0, PL 100.0)",     situation:"Western Observation 2",   band:"ARES" },
 
-      { tac:"V8",  pos:"Falmouth St. & Cambridge Dr.",       gps:"40.73173,-74.33846", op:"K2AUF",
-        primary:"147.505 (−1.0, PL 123.0)",   backup:"146.595 (+1.0, PL 100.0)",     situation:"Southern Observation 1",band:"ARES" },
-    ];
+  { tac:"V10", pos:"Falmouth St. & Cambridge Dr.",        gps:"40.73173,-74.33846", op:"K2AUF",
+    primary:"147.505 (−1.0, PL 123.0)",   backup:"146.595 (+1.0, PL 100.0)",     situation:"Southern Observation 1",  band:"ARES" },
+
+  { tac:"X11", pos:"Chatham Rd. & Forest Drive S.",       gps:"40.72633,-74.3289",  op:"WB2GZL",
+    primary:"147.505 (−1.0, PL 123.0)",   backup:"146.595 (+1.0, PL 100.0)",     situation:"Race Intersection",       band:"ARES" },
+
+  { tac:"P12", pos:"Glenwood Dr. & Millburn Ave",         gps:"40.71938,-74.3208",  op:"K2EXX",
+    primary:"147.505 (−1.0, PL 123.0)",   backup:"146.595 (+1.0, PL 100.0)",     situation:"Drivers Fail To Stop",    band:"ARES" },
+  ];
 
     // --- Tab switcher ---
     const tabMap  = document.getElementById('tab-map');
