--- a/tour-de-millburn-2025.html
+++ b/tour-de-millburn-2025.html
@@ -214,43 +214,48 @@
   <script>
     // --- Data model (edit here if assignments change) ---
 const POSTS = [
-  { tac:"X1",  pos:"Wyoming Ave & Glen Ave",              gps:"40.72474,-74.29625", op:"KB2SUL",
-    primary:"147.505 (−1.0, PL 123.0)", backup:"146.595 (+1.0, PL 100.0)", situation:"Race Intersection",            band:"ARES" },
+  { tac:"X1",  pos:"Wyoming Ave & Glen Ave",               gps:"40.72474,-74.29625", op:"K2AUF",
+    primary:"147.505 (−1.0, PL 123.0)", backup:"146.595 (+1.0, PL 100.0)", situation:"Race Intersection",              band:"ARES" },
 
-  { tac:"P2",  pos:"Old Short & Hobart",                  gps:"40.72768,-74.31125", op:"KE2DRE",
-    primary:"147.505 (−1.0, PL 123.0)", backup:"146.595 (+1.0, PL 100.0)", situation:"Drivers Fail To Stop",         band:"ARES" },
+  { tac:"P2",  pos:"Mountain Av. & Myrtle Av.",            gps:"40.73095,-74.28716", op:"KB2SUL",
+    primary:"147.505 (−1.0, PL 123.0)", backup:"146.595 (+1.0, PL 100.0)", situation:"Steep Hill / Issue last year",   band:"ARES" },
 
-  { tac:"V3",  pos:"Hobart Ave. & Gapview Road",          gps:"40.7273,-74.32158",  op:"KC2HLA",
-    primary:"147.505 (−1.0, PL 123.0)", backup:"146.595 (+1.0, PL 100.0)", situation:"Central Observation 1",        band:"ARES" },
+  { tac:"P3",  pos:"Old Short & Hobart",                   gps:"40.72768,-74.31125", op:"KE2DRE",
+    primary:"147.505 (−1.0, PL 123.0)", backup:"146.595 (+1.0, PL 100.0)", situation:"Drivers Fail To Stop",           band:"ARES" },
 
-  { tac:"V4",  pos:"Lake Rd. & Western Dr.",              gps:"40.7341,-74.32263",  op:"KD2ONY",
-    primary:"147.505 (−1.0, PL 123.0)", backup:"146.595 (+1.0, PL 100.0)", situation:"Central Observation 2",        band:"ARES" },
+  { tac:"V4",  pos:"Hobart Ave. & Gapview Road",           gps:"40.7273,-74.32158",  op:"KC2HLA",
+    primary:"147.505 (−1.0, PL 123.0)", backup:"146.595 (+1.0, PL 100.0)", situation:"Central Observation 1",          band:"ARES" },
 
-  { tac:"V5",  pos:"Highland Ave. & Hartshorn Dr.",       gps:"40.73966,-74.32873", op:"KC2NJ",
-    primary:"147.505 (−1.0, PL 123.0)", backup:"146.595 (+1.0, PL 100.0)", situation:"Central Observation 3",        band:"ARES" },
+  { tac:"V5",  pos:"Lake Rd. & Western Dr.",               gps:"40.7341,-74.32263",  op:"KD2ONY",
+    primary:"147.505 (−1.0, PL 123.0)", backup:"146.595 (+1.0, PL 100.0)", situation:"Central Observation 2",          band:"ARES" },
 
-  { tac:"V6",  pos:"Highview Rd. & Hartshorn Dr.",        gps:"40.74417,-74.3206",  op:"Mara",
-    primary:"154.600 (MURS 5)",            backup:"154.570 (MURS 4)",            situation:"Central Observation 4",   band:"MURS" },
+  { tac:"V6",  pos:"Highland Ave. & Hartshorn Dr.",        gps:"40.73966,-74.32873", op:"KC2NJ",
+    primary:"147.505 (−1.0, PL 123.0)", backup:"146.595 (+1.0, PL 100.0)", situation:"Central Observation 3",          band:"ARES" },
 
-  { tac:"V7",  pos:"Troy Lane & Troy Drive",              gps:"40.75283,-74.31584", op:"Ben",
-    primary:"154.600 (MURS 5)",            backup:"154.570 (MURS 4)",            situation:"Northern Observation",    band:"MURS" },
+  { tac:"V7",  pos:"Farbrook Dr. & Hampshire Rd.",         gps:"40.74862,-74.3203",  op:"Mara",
+    primary:"154.600 (MURS 5)",            backup:"154.570 (MURS 4)",            situation:"Central Observation 4",     band:"MURS" },
 
-  { tac:"V8",  pos:"Long Hill Dr. & Westview Rd.",        gps:"40.74891,-74.32602", op:"Mara",
-    primary:"154.600 (MURS 5)",            backup:"154.570 (MURS 4)",            situation:"Western Observation 1",   band:"MURS" },
+  { tac:"V8",  pos:"Troy Lane & Troy Drive",               gps:"40.75283,-74.31584", op:"",
+    primary:"154.600 (MURS 5)",            backup:"154.570 (MURS 4)",            situation:"Northern Observation",      band:"MURS" },
 
-  { tac:"V9",  pos:"Long Hill Dr. & Lee Terrace",         gps:"40.74172,-74.33291", op:"KC2NJ",
-    primary:"147.505 (−1.0, PL 123.0)",   backup:"146.595 (+1.0, PL 100.0)",     situation:"Western Observation 2",   band:"ARES" },
+  { tac:"P9",  pos:"Athens Rd. & Barry Ln.",               gps:"40.75517,-74.3192",  op:"Ben",
+    primary:"154.600 (MURS 5)",            backup:"154.570 (MURS 4)",            situation:"Plates In Road",            band:"MURS" },
 
-  { tac:"V10", pos:"Falmouth St. & Cambridge Dr.",        gps:"40.73173,-74.33846", op:"K2AUF",
-    primary:"147.505 (−1.0, PL 123.0)",   backup:"146.595 (+1.0, PL 100.0)",     situation:"Southern Observation 1",  band:"ARES" },
+  { tac:"V10", pos:"Long Hill Dr. & Westview Rd.",         gps:"40.74891,-74.32602", op:"Mara",
+    primary:"154.600 (MURS 5)",            backup:"154.570 (MURS 4)",            situation:"Western Observation 1",     band:"MURS" },
 
-  { tac:"X11", pos:"Chatham Rd. & Forest Drive S.",       gps:"40.72633,-74.3289",  op:"WB2GZL",
-    primary:"147.505 (−1.0, PL 123.0)",   backup:"146.595 (+1.0, PL 100.0)",     situation:"Race Intersection",       band:"ARES" },
+  { tac:"V11", pos:"Long Hill Dr. & Lee Terrace",          gps:"40.74172,-74.33291", op:"KC2NJ",
+    primary:"147.505 (−1.0, PL 123.0)",   backup:"146.595 (+1.0, PL 100.0)",     situation:"Western Observation 2",     band:"ARES" },
 
-  { tac:"P12", pos:"Glenwood Dr. & Millburn Ave",         gps:"40.71938,-74.3208",  op:"K2EXX",
-    primary:"147.505 (−1.0, PL 123.0)",   backup:"146.595 (+1.0, PL 100.0)",     situation:"Drivers Fail To Stop",    band:"ARES" },
-  ];
+  { tac:"V12", pos:"Falmouth St. & Cambridge Dr.",         gps:"40.73173,-74.33846", op:"",
+    primary:"147.505 (−1.0, PL 123.0)",   backup:"146.595 (+1.0, PL 100.0)",     situation:"Southern Observation 1",    band:"ARES" },
 
+  { tac:"X13", pos:"Chatham Rd. & Forest Drive S.",        gps:"40.72633,-74.3289",  op:"WB2GZL",
+    primary:"147.505 (−1.0, PL 123.0)",   backup:"146.595 (+1.0, PL 100.0)",     situation:"Race Intersection",         band:"ARES" },
+
+  { tac:"P14", pos:"Glenwood Dr. & Millburn Ave",          gps:"40.71938,-74.3208",  op:"K2EXX",
+    primary:"147.505 (−1.0, PL 123.0)",   backup:"146.595 (+1.0, PL 100.0)",     situation:"Drivers Fail To Stop",      band:"ARES" },
+];
     // --- Tab switcher ---
     const tabMap  = document.getElementById('tab-map');
     const tabList = document.getElementById('tab-list');
