--- a/tour-de-millburn-2025.html
+++ b/tour-de-millburn-2025.html
@@ -247,7 +247,7 @@ const POSTS = [
   { tac:"V11", pos:"Long Hill Dr. & Lee Terrace",          gps:"40.74172,-74.33291", op:"KC2NJ",
     primary:"147.505 (−1.0, PL 123.0)",   backup:"146.595 (+1.0, PL 100.0)",     situation:"Western Observation 2",     band:"ARES" },
 
-  { tac:"V12", pos:"Falmouth St. & Cambridge Dr.",         gps:"40.73173,-74.33846", op:"",
+  { tac:"V12", pos:"Falmouth St. & Cambridge Dr.",         gps:"40.73173,-74.33846", op:"NB1LL",
     primary:"147.505 (−1.0, PL 123.0)",   backup:"146.595 (+1.0, PL 100.0)",     situation:"Southern Observation 1",    band:"ARES" },
 
   { tac:"X13", pos:"Chatham Rd. & Forest Drive S.",        gps:"40.72633,-74.3289",  op:"WB2GZL",
