--- a/index.html
+++ b/index.html
@@ -163,12 +163,12 @@
           <div class="card" role="complementary" aria-label="Quick facts">
             <h3>What we can provide</h3>
             <ul class="muted" style="margin:0 0 4px 18px;line-height:1.6">
+              <li>Communication platform diverse of traditional networks (cellular/5G, internet, county-wide trunked, etc.)</li>
               <li>Staffing for EOCs, shelters, hospitals, field sites, and checkpoints</li>
-              <li>County-wide nets and directed traffic handling</li>
+              <li>Communications for 5K/10K/half/marathon runs, cycling events, large community gatherings</li>
+              <li>County-wide communication nets and directed traffic handling</li>
               <li>Field-expedient antennas and portable stations</li>
               <li>Voice and message traffic, including partner-preferred forms (e.g., ICS-213) via radio or radio-email</li>
-              <li>Liaison with regional nets and neighboring counties</li>
-              <li>Communications for 5K/10K/half/marathon runs, cycling events, large community gatherings</li>
             </ul>
             <div class="note"><br><br>ARES augments—not replaces—public safety communications, and operates under partner direction.</div>
           </div>
