--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <h3>What we can provide</h3>
             <ul class="muted" style="margin:0 0 4px 18px;line-height:1.6">
               <li>Communication platform diverse of traditional networks (cellular/5G, internet, county-wide trunked, etc.)</li>
-              <li>Staffing for EOCs, shelters, hospitals, field sites, and checkpoints</li>
+              <li>Staffing for EOCs, shelters, hospitals, field sites, and community events</li>
               <li>Communications for 5K/10K/half/marathon runs, cycling events, large community gatherings</li>
               <li>County-wide communication nets and directed traffic handling</li>
               <li>Field-expedient antennas and portable stations</li>
