--- a/tour-de-millburn-2025.html
+++ b/tour-de-millburn-2025.html
@@ -223,7 +223,7 @@ const POSTS = [
   { tac:"P3",  pos:"Old Short & Hobart",                   gps:"40.72768,-74.31125", op:"KE2DRE",
     primary:"147.505 (−1.0, PL 123.0)", backup:"146.595 (+1.0, PL 100.0)", situation:"Drivers Fail To Stop",           band:"ARES" },
 
-  { tac:"V4",  pos:"Hobart Ave. & Gapview Road",           gps:"40.7273,-74.32158",  op:"KC2HLA",
+  { tac:"V4",  pos:"Hobart Ave. & Hillside Ave.",           gps:"40.72758, -74.31861",  op:"KC2HLA",
     primary:"147.505 (−1.0, PL 123.0)", backup:"146.595 (+1.0, PL 100.0)", situation:"Central Observation 1",          band:"ARES" },
 
   { tac:"V5",  pos:"Lake Rd. & Western Dr.",               gps:"40.7341,-74.32263",  op:"KD2ONY",
