--- a/tour-de-millburn-2025.html
+++ b/tour-de-millburn-2025.html
@@ -255,6 +255,9 @@ const POSTS = [
 
   { tac:"P14", pos:"Glenwood Dr. & Millburn Ave",          gps:"40.71938,-74.3208",  op:"K2EXX",
     primary:"147.505 (−1.0, PL 123.0)",   backup:"146.595 (+1.0, PL 100.0)",     situation:"Drivers Fail To Stop",      band:"ARES" },
+
+  { tac:"V15", pos:"Millburn Ave. & Midland Rd.",          gps:"40.72221, -74.31373",  op:"W2KAR",
+    primary:"147.505 (−1.0, PL 123.0)",   backup:"146.595 (+1.0, PL 100.0)",     situation:"Southern Observation 2",      band:"ARES" },
 ];
     // --- Tab switcher ---
     const tabMap  = document.getElementById('tab-map');
