--- a/tour-de-millburn-2025.html
+++ b/tour-de-millburn-2025.html
@@ -22,11 +22,38 @@
       --warn:#f59e0b;       /* warning */
       --card:#121b31;       /* card background */
       --ring:#1e293b;       /* subtle outlines */
+
+      /* Alert banner palette */
+      --banner-bg:#fde047;  /* vivid yellow */
+      --banner-border:#eab308; /* deeper yellow */
+      --banner-fg:#0b1020;  /* dark text for contrast */
     }
     * { box-sizing: border-box; }
     html, body { margin:0; padding:0; background:var(--bg); color:var(--ink); font-family: system-ui, -apple-system, Segoe UI, Roboto,  Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji"; }
     a { color: var(--accent); }
     .wrap { max-width: 900px; margin: 0 auto; padding: env(safe-area-inset-top) 16px 96px; }
+
+    /* ATTENTION BANNER */
+    .alert-banner{
+      position: sticky; top: 0; z-index: 1100;
+      background: var(--banner-bg); color: var(--banner-fg);
+      border-bottom: 2px solid var(--banner-border);
+      padding: calc(env(safe-area-inset-top) + 8px) 12px 8px;
+      display: flex; align-items: center; gap: 10px; justify-content: center;
+      font-weight: 800; text-align: center; letter-spacing: .2px;
+      box-shadow: 0 6px 12px rgba(0,0,0,.25);
+    }
+    .alert-banner .icon{ font-size: 18px; line-height: 1; }
+    .alert-banner .banner-text{ font-size: 14px; }
+    .alert-banner .banner-text b{ font-weight: 900; }
+    .banner-close{
+      all: unset; cursor: pointer; margin-left: auto; padding: 8px;
+      border-radius: 8px; line-height: 1; color: inherit;
+    }
+    .banner-close:focus-visible{ outline: 2px solid currentColor; outline-offset: 2px; }
+    @media (min-width:640px){
+      .alert-banner .banner-text{ font-size: 15px; }
+    }
 
     /* Header */
     header {
@@ -150,6 +177,16 @@
   </style>
 </head>
 <body>
+
+  <!-- ATTENTION BANNER -->
+  <div class="alert-banner" role="alert" aria-live="assertive" aria-atomic="true">
+    <span class="icon" aria-hidden="true">⚠️</span>
+    <span class="banner-text">
+      Due to inclement weather, <b>this event has been postponed</b> to <b>Sunday, September 28th 2025</b>.
+    </span>
+    <button class="banner-close" aria-label="Dismiss banner">✕</button>
+  </div>
+
   <header>
     <!-- Clickable ARES logo -->
     <a href="https://ares.osi3.net/" aria-label="ARES Home">
@@ -157,14 +194,14 @@
     </a>
     <div class="title">
       <b>2025 Tour de Millburn</b>
-      <span>ARES Mobile Operations • Sept 7, 2025 • 7:30–10:30 AM</span>
+      <span>ARES Mobile Operations • Sept 28, 2025 • 7:30–10:30 AM</span>
     </div>
   </header>
 
   <div class="wrap">
     <section class="hero" aria-label="Event summary">
       <div class="kvs">
-        <div class="kv"><b>Date</b><div>Sunday, Sept 7, 2025</div></div>
+        <div class="kv"><b>Date</b><div>Sunday, Sept 28, 2025</div></div>
         <div class="kv"><b>Ops Window</b><div>07:30 – 10:30 AM</div></div>
         <div class="kv"><b>Primary</b><div>147.505 (−1.0, PL 123.0)</div></div>
         <div class="kv"><b>Backup</b><div>146.595 (+1.0, PL 100.0)</div></div>
@@ -408,6 +445,18 @@ const POSTS = [
       clearTimeout(window.__toast);
       window.__toast = setTimeout(()=> toastDiv.style.opacity = '0', 1100);
     }
+
+    // --- Banner dismiss (session-scoped) ---
+    (function wireBannerDismiss(){
+      const key = 'tdm2025_banner_dismissed';
+      const banner = document.querySelector('.alert-banner');
+      if(!banner) return;
+      if(sessionStorage.getItem(key) === '1'){ banner.remove(); return; }
+      banner.querySelector('.banner-close')?.addEventListener('click', () => {
+        banner.remove();
+        sessionStorage.setItem(key, '1');
+      });
+    })();
   </script>
 </body>
 </html>
