--- a/tour-de-millburn-2025.html
+++ b/tour-de-millburn-2025.html
@@ -260,7 +260,7 @@ const POSTS = [
   { tac:"P3",  pos:"Old Short & Hobart",                   gps:"40.72768,-74.31125", op:"KE2DRE",
     primary:"147.505 (−1.0, PL 123.0)", backup:"146.595 (+1.0, PL 100.0)", situation:"Drivers Fail To Stop",           band:"ARES" },
 
-  { tac:"V4",  pos:"Hobart Ave. & Hillside Ave.",           gps:"40.72758, -74.31861",  op:"KC2HLA",
+  { tac:"V4",  pos:"Hobart Ave. & Hillside Ave.",          gps:"40.72758,-74.31861", op:"KC2HLA",
     primary:"147.505 (−1.0, PL 123.0)", backup:"146.595 (+1.0, PL 100.0)", situation:"Central Observation 1",          band:"ARES" },
 
   { tac:"V5",  pos:"Lake Rd. & Western Dr.",               gps:"40.7341,-74.32263",  op:"KD2ONY",
@@ -272,8 +272,8 @@ const POSTS = [
   { tac:"V7",  pos:"Farbrook Dr. & Hampshire Rd.",         gps:"40.74862,-74.3203",  op:"Mara",
     primary:"154.600 (MURS 5)",            backup:"154.570 (MURS 4)",            situation:"Central Observation 4",     band:"MURS" },
 
-  { tac:"V8",  pos:"Troy Lane & Troy Drive",               gps:"40.75283,-74.31584", op:"",
-    primary:"154.600 (MURS 5)",            backup:"154.570 (MURS 4)",            situation:"Northern Observation",      band:"MURS" },
+  { tac:"V8",  pos:"Troy Lane & Troy Drive",               gps:"40.75283,-74.31584", op:"KD2ZSW",
+    primary:"147.505 (−1.0, PL 123.0)",   backup:"146.595 (+1.0, PL 100.0)",     situation:"Northern Observation",      band:"ARES" },
 
   { tac:"P9",  pos:"Athens Rd. & Barry Ln.",               gps:"40.75517,-74.3192",  op:"Ben",
     primary:"154.600 (MURS 5)",            backup:"154.570 (MURS 4)",            situation:"Plates In Road",            band:"MURS" },
@@ -293,8 +293,8 @@ const POSTS = [
   { tac:"P14", pos:"Glenwood Dr. & Millburn Ave",          gps:"40.71938,-74.3208",  op:"K2EXX",
     primary:"147.505 (−1.0, PL 123.0)",   backup:"146.595 (+1.0, PL 100.0)",     situation:"Drivers Fail To Stop",      band:"ARES" },
 
-  { tac:"V15", pos:"Millburn Ave. & Midland Rd.",          gps:"40.72221, -74.31373",  op:"W2KAR",
-    primary:"147.505 (−1.0, PL 123.0)",   backup:"146.595 (+1.0, PL 100.0)",     situation:"Southern Observation 2",      band:"ARES" },
+  { tac:"V15", pos:"Millburn Ave. & Midland Rd.",          gps:"40.72221,-74.31373", op:"W2KAR",
+    primary:"147.505 (−1.0, PL 123.0)",   backup:"146.595 (+1.0, PL 100.0)",     situation:"Southern Observation 2",    band:"ARES" },
 ];
     // --- Tab switcher ---
     const tabMap  = document.getElementById('tab-map');
