--- a/tour-de-millburn-2025.html
+++ b/tour-de-millburn-2025.html
@@ -286,16 +286,19 @@ const POSTS = [
   { tac:"V11", pos:"Long Hill Dr. & Lee Terrace",          gps:"40.74172,-74.33291", op:"KC2NJ",
     primary:"147.505 (−1.0, PL 123.0)",   backup:"146.595 (+1.0, PL 100.0)",     situation:"Western Observation 2",     band:"ARES" },
 
-  { tac:"V12", pos:"Falmouth St. & Cambridge Dr.",         gps:"40.73173,-74.33846", op:"KC1HBB",
+  { tac:"V12", pos:"Slayton Dr. & Long Hill Dr.",          gps:"40.738,-74.33957",   op:"KE2FKE",
+    primary:"147.505 (−1.0, PL 123.0)",   backup:"146.595 (+1.0, PL 100.0)",     situation:"Western Observation 3",     band:"ARES" },
+
+  { tac:"V13", pos:"Falmouth St. & Cambridge Dr.",         gps:"40.73173,-74.33846", op:"KC1HBB",
     primary:"147.505 (−1.0, PL 123.0)",   backup:"146.595 (+1.0, PL 100.0)",     situation:"Southern Observation 1",    band:"ARES" },
 
-  { tac:"X13", pos:"Chatham Rd. & Forest Drive S.",        gps:"40.72633,-74.3289",  op:"WB2GZL",
+  { tac:"X14", pos:"Chatham Rd. & Forest Drive S.",        gps:"40.72633,-74.3289",  op:"WB2GZL",
     primary:"147.505 (−1.0, PL 123.0)",   backup:"146.595 (+1.0, PL 100.0)",     situation:"Race Intersection",         band:"ARES" },
 
-  { tac:"P14", pos:"Glenwood Dr. & Millburn Ave",          gps:"40.71938,-74.3208",  op:"K2EXX",
+  { tac:"P15", pos:"Glenwood Dr. & Millburn Ave",          gps:"40.71938,-74.3208",  op:"K2EXX",
     primary:"147.505 (−1.0, PL 123.0)",   backup:"146.595 (+1.0, PL 100.0)",     situation:"Drivers Fail To Stop",      band:"ARES" },
 
-  { tac:"V15", pos:"Millburn Ave. & Midland Rd.",          gps:"40.72221,-74.31373", op:"W2KAR",
+  { tac:"V16", pos:"Millburn Ave. & Midland Rd.",          gps:"40.72221,-74.31373", op:"W2KAR",
     primary:"147.505 (−1.0, PL 123.0)",   backup:"146.595 (+1.0, PL 100.0)",     situation:"Southern Observation 2",    band:"ARES" },
 ];
     // --- Tab switcher ---
