--- a/index.html
+++ b/index.html
@@ -261,9 +261,10 @@
           <p class="note">Any FCC-licensed Amateur Radio operator with an interest in public service is welcome to take part in ARES in a supporting role. Opportunities to grow into leadership or higher qualification levels are available with additional training, and in some cases, ARRL membership.</p>
           <p class="note">Groups.io page: <a href="https://nenj-ares-emcomm.groups.io/g/main" target="_blank" rel="noopener noreferrer">https://nenj-ares-emcomm.groups.io/g/main</a>
           <h3>Monthly Net</h3>
-          <p class="note">Second Thursday of every month at 8 PM ET<br>
+          <p class="note">Second Monday of every month at 8 PM ET<br>
                           KC2TXA (SBARC) Repeater<br>
-                          RF: 146.595 | +1 MHz | 100.0 Hz PL encode AND decode<br>
+                          RF: 146.595 | +1.0 MHz | 100.0 Hz PL encode AND decode | West Essex County<br>
+                          RF: 147.225 | +0.6 MHz | 141.3 Hz PL encode | East Essex County<br>
                           EchoLink: KC2TXA-R</p>
         </div>
         <div class="card">
