--- a/index.html
+++ b/index.html
@@ -263,8 +263,9 @@
           <h3>Monthly Net</h3>
           <p class="note">Second Monday of every month at 8 PM ET<br>
                           KC2TXA (SBARC) Repeater<br>
+                          K2MFF (NJIT) Repeater<br>
                           RF: 146.595 | +1.0 MHz | 100.0 Hz PL encode AND decode | West Essex County<br>
-                          RF: 147.225 | +0.6 MHz | 141.3 Hz PL encode            | East Essex County<br>
+                          RF: 147.225 | +0.6 MHz | 141.3 Hz PL encode | East Essex County<br>
                           EchoLink: KC2TXA-R</p>
         </div>
         <div class="card">
