--- a/tour-de-millburn-2025-recap.html
+++ b/tour-de-millburn-2025-recap.html
@@ -139,7 +139,7 @@
       <nav class="topnav">
         <a href="/" aria-label="Home">Home</a>
         <a href="/tour-de-millburn-2025.html">Ops Page</a>
-        <a href="mailto:kc2nj@osi3.net">Contact</a>
+        <a href="mailto:stan@rogacki.net">Contact</a>
       </nav>
     </div>
   </header>
@@ -151,7 +151,7 @@
       <div class="overlay">
         <div class="title">
           <div class="pill" aria-label="Event tag">2025 Tour de Millburn • Event Recap</div>
-          <h1>Clear Comms, Smooth Ops, and Smiles All Around</h1>
+          <h1>Clear Comms, Smooth Ops, Great Teamwork</h1>
           <p class="muted small">Sunday, Sept 28, 2025 • Millburn, NJ</p>
         </div>
       </div>
@@ -200,7 +200,7 @@
             <p>We’ll review what went well and prioritize improvements for next year’s routes, staffing, and comms.</p>
           </div>
         </div>
-        <p class="small muted">Invite details will be shared on the ARES list.</p>
+        <p class="small muted">Invite details will be shared via ARES e-mail distributon.</p>
       </aside>
     </main>
 
@@ -213,25 +213,25 @@
           <a href="img/tdm-25-1.jpg" target="_blank" rel="noopener">
             <img src="img/tdm-25-1.jpg" alt="Tour de Millburn photo 1" loading="lazy" />
           </a>
-          <figcaption>On the course</figcaption>
+          <figcaption>Downtown start line</figcaption>
         </figure>
         <figure>
           <a href="img/tdm-25-2.jpg" target="_blank" rel="noopener">
             <img src="img/tdm-25-2.jpg" alt="Tour de Millburn photo 2" loading="lazy" />
           </a>
-          <figcaption>Volunteers in action</figcaption>
+          <figcaption>Waiting for the start</figcaption>
         </figure>
         <figure>
           <a href="img/tdm-25-3.jpg" target="_blank" rel="noopener">
             <img src="img/tdm-25-3.jpg" alt="Tour de Millburn photo 3" loading="lazy" />
           </a>
-          <figcaption>Clear comms at checkpoints</figcaption>
+          <figcaption>Finish-line smiles</figcaption>
         </figure>
         <figure>
           <a href="img/tdm-25-4.jpg" target="_blank" rel="noopener">
             <img src="img/tdm-25-4.jpg" alt="Tour de Millburn photo 4 (lede)" loading="lazy" />
           </a>
-          <figcaption>Finish-line smiles</figcaption>
+          <figcaption>On the course</figcaption>
         </figure>
       </div>
     </section>
