--- a/tour-de-millburn-2025-recap.html
+++ b/tour-de-millburn-2025-recap.html
@@ -151,7 +151,7 @@
       <div class="overlay">
         <div class="title">
           <div class="pill" aria-label="Event tag">2025 Tour de Millburn • Event Recap</div>
-          <h1>Clear Comms, Smooth Ops, Great Teamwork</h1>
+          <h1>Clear Comms, Smooth Ops, and Great Teamwork</h1>
           <p class="muted small">Sunday, Sept 28, 2025 • Millburn, NJ</p>
         </div>
       </div>
