--- a/tour-de-millburn-2025-recap.html
+++ b/tour-de-millburn-2025-recap.html
@@ -207,7 +207,7 @@
     <!-- GALLERY -->
     <section class="card" style="margin-top:24px;">
       <h2>Photo Gallery</h2>
-      <p class="muted small" style="margin-top:-4px">A few moments from the day—tap to open full size in a new tab.</p>
+      <p class="muted small" style="margin-top:-4px">A few moments from the day—tap to open full size in a new tab.  Photos via Facebook & user submission</p>
       <div class="gallery">
         <figure>
           <a href="img/tdm-25-1.jpg" target="_blank" rel="noopener">
