--- a/tour-de-millburn-2025-recap.html
+++ b/tour-de-millburn-2025-recap.html
@@ -163,9 +163,10 @@
         <h2>Highlights</h2>
         <ul class="bullets">
           <li>Weather was beautiful—sunny and warm.</li>
-          <li>Event started on time.</li>
+          <li>Road conditions slick from overnight rain.</li>
           <li>Hundreds of cyclists enjoyed the 3 courses (2-mile, 7-mile, 15-mile).</li>
           <li>Radio communication between ARES volunteers was clear and effective.</li>
+          <li>WA2BAT/R provided excellent coverage; northern stations should run high power.</li>
           <li>No major safety incidents along the courses.</li>
           <li>Event sponsor and the Millburn Police Department were pleased with our performance and efforts.</li>
         </ul>
