--- a/tour-de-millburn-2025-recap.html
+++ b/tour-de-millburn-2025-recap.html
@@ -165,6 +165,7 @@
           <li>Weather was beautiful—sunny and warm.</li>
           <li>Road conditions slick from overnight rain.</li>
           <li>Hundreds of cyclists enjoyed the 3 courses (2-mile, 7-mile, 15-mile).</li>
+          <li>14 ARES volunteers provided real-time communication on the 7 and 15 mile courses.</li>
           <li>Radio communication between ARES volunteers was clear and effective.</li>
           <li>WA2BAT/R provided excellent coverage; northern stations should run high power.</li>
           <li>No major safety incidents along the courses.</li>
