--- a/tour-de-millburn-2025-recap.html
+++ b/tour-de-millburn-2025-recap.html
@@ -181,7 +181,10 @@
 
         <div class="stack">
           <h2>Thank You</h2>
-          <p class="muted">Huge thanks to all ARES volunteers, the event organizers, and the Millburn Police Department. Your teamwork kept the airwaves clean and the riders safe.</p>
+          <p class="muted">Huge thanks to our ARES volunteers, event organizers, the Millburn Township team, and 
+            the Millburn Police Department. Clear comms kept riders safe from start to finish, and our sponsor
+            left with a strong appreciation for the service this team provides. Special thanks to the WA2BAT repeater
+            trustees for system use.</p>
 
           <div class="kudos">
             <span class="dot" aria-hidden="true"></span>
